support low api versions and avoid input race condition